<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/cardView"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/dp_10"
    app:cardElevation="@dimen/dp_4"
    app:cardCornerRadius="@dimen/dp_4"
    android:foreground="?attr/selectableItemBackground"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dip">

        <com.legend.liteim.common.widget.CircleImageView
            android:id="@+id/publisher_portrait"
            android:src="@drawable/g"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="10dp"
            android:transitionName="@string/portrait"/>

        <TextView
            android:id="@+id/tv_publisher_nickname"
            android:text="、legend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/publisher_portrait"
            android:textColor="#000"
            android:textSize="15sp"
            android:transitionName="@string/publisher_name"/>

        <TextView
            android:id="@+id/tv_publish_time"
            android:text="2018年6:59"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_publisher_nickname"
            android:layout_marginTop="0.5dip"
            android:layout_toRightOf="@+id/publisher_portrait"
            android:textColor="#777"
            android:textSize="13sp"
            android:transitionName="@string/publish_time"/>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_selector"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_dynamic_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/publisher_portrait"
            android:layout_marginTop="10dip"
            android:textColor="#000"
            android:text="content"
            android:maxLines="3"
            android:ellipsize="end"
            android:textSize="15sp"
            android:transitionName="@string/dynamic_content"/>

        <com.legend.liteim.common.widget.multipicture.MultiPictureLayout
            android:id="@+id/pictures"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_dynamic_content"
            android:layout_marginTop="10dip"
            app:img_visibility_count="6"
            android:transitionName="@string/dynamic_picture_urlList"/>

        <TextView
            android:id="@+id/tv_watch_num"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_below="@+id/pictures"
            android:text="666次围观"
            android:gravity="center"
            android:drawableStart="@drawable/ic_more_info_blue_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_comment_num"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_below="@+id/pictures"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:drawableStart="@drawable/ic_message_black_24dp"
            android:text="666条评论"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_collect"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_4"
            android:layout_below="@+id/pictures"
            android:src="@drawable/ic_collect_hollow"
            android:layout_toStartOf="@+id/tv_collect_num"
            android:layout_alignBottom="@+id/tv_collect_num"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15" />

        <TextView
            android:id="@+id/tv_collect_num"
            android:text="666"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_below="@+id/pictures"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
</android.support.v7.widget.CardView>