<?xml version="1.0" encoding="utf-8"?>
<com.legend.liteim.common.widget.DiNestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/middle_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="260dp"
    android:tag="middle"
    app:layout_collapseMode="parallax"
    app:layout_collapseParallaxMultiplier="0.5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:minHeight="40dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="37dp"
                android:text="@string/app_name"
                android:textColor="#333333"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="37dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_chat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/select_user_chat_tv"
                    android:text="@string/chat"
                    android:foreground="@drawable/ic_touch_menu"
                    android:textColor="@color/colorBlack33" />

                <TextView
                    android:id="@+id/tv_operate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/select_user_chat_tv"
                    android:foreground="@drawable/ic_touch_menu"
                    android:gravity="center"
                    android:text="@string/follow"
                    android:textColor="@color/colorBlack33" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/tv_signature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="2dp"
                android:maxLines="2"
                android:paddingLeft="15dp"
                android:text="music、dance、drive、fly~O(∩_∩)O~"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/colorBg" />

    </LinearLayout>
</com.legend.liteim.common.widget.DiNestedScrollView>