<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_background"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:foreground="@drawable/ic_touch_bg"
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/defacult_picture"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:paddingTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_submit"
                android:textSize="@dimen/sp_16"
                android:drawableEnd="@drawable/ic_done"
                android:layout_gravity="end"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.Toolbar>

        <com.legend.liteim.common.widget.CircleImageView
            android:id="@+id/img_background_add"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_photo_camera"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_margin="@dimen/dp_10" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10">

        <com.legend.liteim.common.widget.CircleImageView
            android:id="@+id/im_portrait"
            android:layout_width="@dimen/len_64"
            android:layout_height="@dimen/len_64"
            android:src="@drawable/g"
            android:layout_marginTop="@dimen/dp_32"
            app:civ_border_color="@color/white"
            app:civ_border_width="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/len_4"
            android:layout_marginStart="@dimen/len_16"
            android:orientation="vertical">

            <net.qiujuer.genius.ui.widget.EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_username"
                android:inputType="text"
                android:lines="1"
                android:maxLength="10"
                android:paddingBottom="@dimen/len_2"
                android:textColor="@color/text_primary_dark"
                android:textSize="@dimen/font_16"
                android:textColorHint="@color/gray"
                app:gHintTitle="slide"
                app:gHintTitlePaddingBottom="@dimen/len_2"
                app:gHintTitleTextSize="@dimen/font_12"
                app:gLineColor="@color/transparency"
                app:gLineSize="1dp" />

            <net.qiujuer.genius.ui.widget.EditText
                android:id="@+id/edt_signature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_signature"
                android:inputType="textMultiLine"
                android:maxLength="64"
                android:maxLines="2"
                android:paddingBottom="@dimen/len_2"
                android:paddingTop="@dimen/len_14"
                android:textColor="@color/text_primary_dark"
                android:textSize="@dimen/font_16"
                app:gLineColor="@color/transparency"
                app:gHintTitle="slide"
                android:textColorHint="@color/gray"
                app:gHintTitlePaddingBottom="@dimen/len_2"
                app:gHintTitleTextSize="@dimen/font_12"
                app:gLineSize="1dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>